# openocode-automation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
Formula/: opencode-orchestrator.rb
docs/: README.md  architecture.md  implementation.md  todo-format.md
electron/: components.json  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.main.json  vite.config.ts
electron/main/: api-client.ts  index.ts  pty-manager.ts  python-bridge.ts
electron/preload/: index.js  index.ts
electron/renderer/: App.tsx  index.html  main.tsx
electron/renderer/api/: hooks.ts
electron/renderer/components/: ControlBar.tsx  InterventionModal.tsx  Onboarding.tsx  Progress.tsx  SessionSelect.tsx  TerminalPane.tsx  UserInput.tsx
electron/renderer/styles/: index.css
examples/: PROJECT.md  TODO.md  orchestrator.yaml
pyinstaller/: spec.py
src/: .env.example  config.py  main.py  requirements.txt
src/api/: __init__.py  deps.py
src/api/routers/: automation.py  sessions.py  tickets.py
src/api/schemas/: automation.py  session.py  ticket.py
src/opencode_orchestrator/: __init__.py  __main__.py
src/opencode_orchestrator/core/: __init__.py  executor.py  test_runner.py  todo_parser.py
src/orchestration/: __init__.py  engine.py  errors.py  machine.py  phase.py
src/services/: database.py  schema.sql
tests/: conftest.py  test_config.py  test_state.py  test_todo_parser.py
