[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-orchestrator"
version = "0.1.0"
description = "Automated OpenCode task orchestrator with Telegram integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenCode Orchestrator", email = "opencode@example.com"}
]
keywords = ["opencode", "automation", "orchestrator", "telegram", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "langgraph>=0.0.50",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
opencode-orchestrator = "main:app"

[project.urls]
Homepage = "https://github.com/opencode-ai/opencode-orchestrator"
Repository = "https://github.com/opencode-ai/opencode-orchestrator"
Issues = "https://github.com/opencode-ai/opencode-orchestrator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
